# CardRails

./: .gitignore  CLAUDE.md  README.md  docker-compose-withKraft.yaml  docker-compose.yaml  pyproject.toml
model_training/: build_dataset.py  train.py
model_training/models/: fraud_model.txt
scripts/: create-topics.sh  describe-groups.sh
src/: authorization.py  clearing.py  config.py  fee_pricing.py  fraud_detection.py  fraud_features.py  fraud_model.py  main.py  tracker.py
