[project]
name = "kafka-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "confluent-kafka>=2.14.0",
    "lightgbm>=4.5.0",
    "numpy>=2.0.0",
]

[dependency-groups]
train = [
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]
